feat : add maodify gather boardin gather model